Updated some texture errors

--- a/Coldcraft/src/resources/assets/coldcraft/lang/en_US.lang
+++ b/Coldcraft/src/resources/assets/coldcraft/lang/en_US.lang
@@ -1,3 +1,3 @@
-<en_US.lang - English localization file for the mod "Tutorial">
+<en_US.lang - English localization file for the mod "Coldcraft">
 
 tile.camp_fire.name=Campfire
