Added coat (missing inventory textures)

--- a/Coldcraft/src/resources/assets/coldcraft/lang/en_US.lang
+++ b/Coldcraft/src/resources/assets/coldcraft/lang/en_US.lang
@@ -2,3 +2,6 @@
 
 tile.camp_fire.name=Campfire
 item.termometer.name=Termometer
+item.coat_coat.name=Winter Coat
+item.coat_boots.name=Winter Boots
+item.winter_cap.name=Winter Cap
